Fixed rendering of tab menus - they are not truncated to screen width now if the page contents is wider than screen

--- a/sim/src/static/kit/styles.css
+++ b/sim/src/static/kit/styles.css
@@ -453,8 +453,7 @@ html {
 	line-height: 20px;
 }
 body {
-	display: block;
-	/*display: inline-block;*/
+	display: inline-block;
 	min-width: 100%;
 	padding: 50px 10px 15px;
 }
